--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="ghost_white">#F8F8FF</color>
+    <color name="pine_tree">#2F3121</color>
+    <color name="cyan_cornflower_blue">#1188CB</color>
+    <color name="pale_taupe">#BB9B74</color>
+    <color name="metallic_seaweed">#1B7A9C</color>
+    <color name="polished_pine">#50A39A</color>
+    <color name="black_chocolate">#1B1D12</color>
 </resources>
