--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,13 +2,13 @@
     <!-- Base application theme. -->
     <style name="Theme.Kutravel" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorPrimary">@color/pine_tree</item>
+        <item name="colorPrimaryVariant">@color/metallic_seaweed</item>
+        <item name="colorOnPrimary">@color/ghost_white</item>
+        <!--  Secondary brand color.  -->
+        <item name="colorSecondary">@color/pale_taupe</item>
+        <item name="colorSecondaryVariant">@color/polished_pine</item>
+        <item name="colorOnSecondary">@color/black_chocolate</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
