--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,31 @@
     tools:context=".ui.MainActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewDashboardCallToAction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Travel the World! Leave a Mark!"
-        android:textSize="15dp"
+        android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.071" />
+
+    <TextView
+        android:id="@+id/textViewDashboardDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Any event, attraction site, or venue you've always wanted to visit? Your time is here. Get a few ideas to light up your celebration, holiday, or vacation."
+        android:textSize="15dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.14" />
 
     <TextView
         android:id="@+id/buttonDashboardEvents"
@@ -27,13 +41,14 @@
         android:paddingTop="70dp"
         android:text="Events"
         android:textAlignment="center"
+        android:textColor="@color/ghost_white"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.069"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.201" />
+        app:layout_constraintVertical_bias="0.368" />
 
     <TextView
         android:id="@+id/buttonDashboardAttractions"
@@ -43,13 +58,14 @@
         android:paddingTop="70dp"
         android:text="Attractions"
         android:textAlignment="center"
+        android:textColor="@color/ghost_white"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.586" />
+        app:layout_constraintVertical_bias="0.773" />
 
     <TextView
         android:id="@+id/buttonDashboardVenues"
@@ -59,12 +75,13 @@
         android:paddingTop="70dp"
         android:text="Venues"
         android:textAlignment="center"
+        android:textColor="@color/ghost_white"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.93"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.201" />
+        app:layout_constraintVertical_bias="0.368" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
