--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,12 +2,12 @@
     <!-- Base application theme. -->
     <style name="Theme.Kutravel" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/pine_tree</item>
+        <item name="colorPrimary">@color/polished_pine</item>
         <item name="colorPrimaryVariant">@color/metallic_seaweed</item>
         <item name="colorOnPrimary">@color/ghost_white</item>
         <!--  Secondary brand color.  -->
         <item name="colorSecondary">@color/pale_taupe</item>
-        <item name="colorSecondaryVariant">@color/polished_pine</item>
+        <item name="colorSecondaryVariant">@color/pine_tree</item>
         <item name="colorOnSecondary">@color/black_chocolate</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
